1567728307 | 2 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_english.txt
https://steamdb.info/patchnotes/4171343/

--- a/content/vrmonitor/translations/vrmonitor_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_english.txt
@@ -1249,9 +1249,9 @@
 "HeadsetView_MenuLabel" "Menu"
 "HeadsetView_PressKeyToExit" "Press %1 to exit Full Screen"
 "HeadsetView_FullscreenButtonLabel" "Full Screen"
-"HeadsetView_DockButtonLabel" "Dock View"
-"HeadsetView_UndockButtonLabel" "Undock View"
-"HeadsetView_CloseButtonLabel" "Close"
+"HeadsetView_DockButtonLabel" "Dock VR View"
+"HeadsetView_UndockButtonLabel" "Undock VR View"
+"HeadsetView_HideButtonLabel" "Hide VR View"
 "HeadsetView_EyeMode_Both" "Both Eyes"
 "HeadsetView_EyeMode_Left" "Left Eye"
 "HeadsetView_EyeMode_Right" "Right Eye"
