1567818841 | 21 files | M bin/version.txt,  M content/panorama/localization/tenfoot_french.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_czech.txt,  M content/vrmonitor/translations/vrmonitor_danish.txt,  M content/vrmonitor/translations/vrmonitor_finnish.txt,  M content/vrmonitor/translations/vrmonitor_french.txt,  M content/vrmonitor/translations/vrmonitor_german.txt,  M content/vrmonitor/translations/vrmonitor_greek.txt,  M content/vrmonitor/translations/vrmonitor_hungarian.txt,  M content/vrmonitor/translations/vrmonitor_italian.txt,  M content/vrmonitor/translations/vrmonitor_japanese.txt,  M content/vrmonitor/translations/vrmonitor_latam.txt,  M content/vrmonitor/translations/vrmonitor_norwegian.txt,  M content/vrmonitor/translations/vrmonitor_polish.txt,  M content/vrmonitor/translations/vrmonitor_portuguese.txt,  M content/vrmonitor/translations/vrmonitor_russian.txt,  M content/vrmonitor/translations/vrmo
https://steamdb.info/patchnotes/4175025/

--- a/content/panorama/localization/tenfoot_french.txt
+++ b/content/panorama/localization/tenfoot_french.txt
@@ -666,7 +666,7 @@
 "[english]Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Spanish-Latin America)"
 "Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamien)"
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
-"BindingCallout_Header"	"VOIR LES CONTRÔLES"
+"BindingCallout_Header"	"VOIR LES COMMANDES"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
 "App_Not_Responding"	"En attente de la réponse de l’application"
 "[english]App_Not_Responding"	"Waiting for application to respond"
