--- a/content/vrmonitor/translations/vrmonitor_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_brazilian.txt
@@ -263,7 +263,7 @@
 "[english]Settings_DisplayMode"	"Display Mode"
 "Settings_DisplayMode_Extend"	"Estender área de trabalho ao monitor"
 "[english]Settings_DisplayMode_Extend"	"Extend desktop to display"
-"Settings_DisplayMode_MirrorWindow"	"Espelhar janela"
+"Settings_DisplayMode_MirrorWindow"	"Visão da RV"
 "[english]Settings_DisplayMode_MirrorWindow"	"VR View"
 "Settings_OpenVRPaths"	"Caminhos do OpenVR"
 "[english]Settings_OpenVRPaths"	"OpenVR Paths"
@@ -2327,6 +2327,8 @@
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 "BS20_UpdateRecovery_FoundStations"	"Varredura concluída.<br><br><font color=#ffffff>As estações base abaixo foram atualizadas pela metade.<br><br>Por favor, selecione uma estação base e clique em \"Restaurar dispositivo\" para continuar.</font>"
 "[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
+"MenuAction_DebugCommands"	"Comandos de depuração"
+"[english]MenuAction_DebugCommands"	"Debug Commands"
 "FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Caso a atualização do dispositivo continue a dar problema...<ul><li>Feche o SteamVR.<li>Desconecte e reconecte o cabo de força da Link Box.<li>Desconecte e reconecte o cabo de força da estação base.<li>inicie o SteamVR e tente novamente.</ul>"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR, and try again.</ul>"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Estação base atualizada com sucesso. Talvez seja necessário desconectar e reconectar o cabo de força da estação base para que apareça como atualizada."
@@ -2351,10 +2353,14 @@
 "[english]MenuAction_ResetSeatedPosition"	"Reset Seated Position"
 "Settings_Bluetooth_RetryConnection"	"Reconectar"
 "[english]Settings_Bluetooth_RetryConnection"	"Retry Connection"
+"BS_PowerManagement_PartialStandby"	"Repouso"
+"[english]BS_PowerManagement_PartialStandby"	"Standby"
 "BS_PowerManagement_PartialStandby_Explanation"	"As estações base desligam apenas os lasers para que despertem mais rápido quando o SteamVR for iniciado."
 "[english]BS_PowerManagement_PartialStandby_Explanation"	"Base Stations will power off only their lasers for a faster wake up when SteamVR starts."
 "BS_PowerManagement_PartialStandby_HybridExplanation"	"As estações base 2.0 desligam apenas os lasers para que despertem mais rápido quando o SteamVR for iniciado."
 "[english]BS_PowerManagement_PartialStandby_HybridExplanation"	"Base Station 2.0 will power off only their lasers for a faster wake up when SteamVR starts."
+"BS_PowerManagement_FullStandby"	"Dormir"
+"[english]BS_PowerManagement_FullStandby"	"Sleep"
 "BS_PowerManagement_FullStandby_Explanation"	"As estações base desligam os lasers e motores."
 "[english]BS_PowerManagement_FullStandby_Explanation"	"Base Stations will power off their lasers and motors."
 "BS_PowerManagement_ConnectionFailureLegend"	"Falha ao conectar-se. Clique em \"Atualizar\" para tentar novamente."
@@ -2377,7 +2383,23 @@
 "[english]BS20_ConfigureChannel_Legend"	"Denotes a channel used by other Base Stations in radio proximity."
 "BS20_ConfigureChannel_AutomaticConfiguration"	"Configuração automática"
 "[english]BS20_ConfigureChannel_AutomaticConfiguration"	"Automatic Configuration"
+"BS20_ConfigureChannel_Apply"	"Aplicar"
+"[english]BS20_ConfigureChannel_Apply"	"Apply"
+"BS20_ConfigureChannel_Connecting"	"Conectando-se..."
+"[english]BS20_ConfigureChannel_Connecting"	"Connecting..."
 "HeadsetView_FullscreenButtonLabel"	"Tela cheia"
 "[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
+"HeadsetView_EyeMode_Both"	"Ambos os olhos"
+"[english]HeadsetView_EyeMode_Both"	"Both Eyes"
+"HeadsetView_EyeMode_Left"	"Olho esquerdo"
+"[english]HeadsetView_EyeMode_Left"	"Left Eye"
+"HeadsetView_EyeMode_Right"	"Olho direito"
+"[english]HeadsetView_EyeMode_Right"	"Right Eye"
+"HeadsetView_EyeMode_BothLeftDominant"	"Ambos os olhos — Esquerdo dominante"
+"[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
+"HeadsetView_EyeMode_BothRightDominant"	"Ambos os olhos — Direito dominante"
+"[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"HeadsetView_DebugCommands"	"Abrir comandos de depuração"
+"[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 }
 }
