--- a/content/vrmonitor/translations/vrmonitor_czech.txt
+++ b/content/vrmonitor/translations/vrmonitor_czech.txt
@@ -2436,7 +2436,7 @@
 "[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
 "MenuAction_SystemReportViewer"	"Informace o systému"
 "[english]MenuAction_SystemReportViewer"	"System Report Viewer"
-"MenuAction_DebugCommands"	"Příkazy pro debugování"
+"MenuAction_DebugCommands"	"Příkazy pro debuggování"
 "[english]MenuAction_DebugCommands"	"Debug Commands"
 "FirmwareWizard_ProgressPercentFinishing"	"[ Dokončování... ]"
 "[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
@@ -2549,9 +2549,9 @@
 "HeadsetView_FullscreenButtonLabel"	"Celá obrazovka"
 "[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
 "HeadsetView_DockButtonLabel"	"Spojit se stavem"
-"[english]HeadsetView_DockButtonLabel"	"Dock View"
+"[english]HeadsetView_DockButtonLabel"	"Dock VR View"
 "HeadsetView_UndockButtonLabel"	"Odpojit od stavu"
-"[english]HeadsetView_UndockButtonLabel"	"Undock View"
+"[english]HeadsetView_UndockButtonLabel"	"Undock VR View"
 "HeadsetView_CloseButtonLabel"	"Zavřít"
 "[english]HeadsetView_CloseButtonLabel"	"Close"
 "HeadsetView_EyeMode_Both"	"Obě oči"
@@ -2566,7 +2566,7 @@
 "[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
 "HeadsetView_ViewMode_Center"	"Vycentrovaný pohled"
 "[english]HeadsetView_ViewMode_Center"	"Center View"
-"HeadsetView_DebugCommands"	"Otevřít příkazy pro debugování"
+"HeadsetView_DebugCommands"	"Otevřít příkazy pro debuggování"
 "[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 }
 }
