--- a/content/vrmonitor/translations/vrmonitor_danish.txt
+++ b/content/vrmonitor/translations/vrmonitor_danish.txt
@@ -2385,7 +2385,7 @@
 "[english]VRApplicationError_UnknownProperty"	"Unknown property"
 "VRApplicationError_InvalidParameter"	"Ugyldig parameter"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
-"Settings_Advanced_RefreshRate_NotFound"	"<b>BEMÆRK:</b> Yderligere opdateringshastigheder understøttes af dit HMD, men de blev ikke registreret af grafikdriveren. Bekræft, at dit headsets firmware og grafikdrivere er opdaterede."
+"Settings_Advanced_RefreshRate_NotFound"	"<b>BEMÆRK:</b> Yderligere opdateringshastigheder understøttes af dit HMD, men de blev ikke registreret af grafikdriveren. Bekræft, at dit headsets firmware- og grafikdrivere er opdaterede."
 "[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>BEMÆRK:</b> Yderligere opdateringshastigheder understøttes af din HMD, men SteamVR kan ikke administrere opdateringshastigheder, når HMD'en er i udvidet tilstand. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Slå direkte tilstand til.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
@@ -2415,7 +2415,7 @@
 "[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
 "MenuAction_SystemReportViewer"	"Se systemrapporter"
 "[english]MenuAction_SystemReportViewer"	"System Report Viewer"
-"MenuAction_DebugCommands"	"Fejlfind kommandoer"
+"MenuAction_DebugCommands"	"Fejlfindingskommandoer"
 "[english]MenuAction_DebugCommands"	"Debug Commands"
 "FirmwareWizard_ProgressPercentFinishing"	"[ Afslutter... ]"
 "[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
@@ -2528,9 +2528,9 @@
 "HeadsetView_FullscreenButtonLabel"	"Fuld skærm"
 "[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
 "HeadsetView_DockButtonLabel"	"Fastgør visning"
-"[english]HeadsetView_DockButtonLabel"	"Dock View"
+"[english]HeadsetView_DockButtonLabel"	"Dock VR View"
 "HeadsetView_UndockButtonLabel"	"Frigør visning"
-"[english]HeadsetView_UndockButtonLabel"	"Undock View"
+"[english]HeadsetView_UndockButtonLabel"	"Undock VR View"
 "HeadsetView_CloseButtonLabel"	"Luk"
 "[english]HeadsetView_CloseButtonLabel"	"Close"
 "HeadsetView_EyeMode_Both"	"Begge øjne"
@@ -2545,7 +2545,7 @@
 "[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
 "HeadsetView_ViewMode_Center"	"Centreret visning"
 "[english]HeadsetView_ViewMode_Center"	"Center View"
-"HeadsetView_DebugCommands"	"Fejlfind kommandoer"
+"HeadsetView_DebugCommands"	"Åbn fejlfindingskommandoer"
 "[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 }
 }
