--- a/content/vrmonitor/translations/vrmonitor_german.txt
+++ b/content/vrmonitor/translations/vrmonitor_german.txt
@@ -2554,9 +2554,9 @@
 "HeadsetView_FullscreenButtonLabel"	"Vollbild"
 "[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
 "HeadsetView_DockButtonLabel"	"Ansicht andocken"
-"[english]HeadsetView_DockButtonLabel"	"Dock View"
+"[english]HeadsetView_DockButtonLabel"	"Dock VR View"
 "HeadsetView_UndockButtonLabel"	"Ansicht lösen"
-"[english]HeadsetView_UndockButtonLabel"	"Undock View"
+"[english]HeadsetView_UndockButtonLabel"	"Undock VR View"
 "HeadsetView_CloseButtonLabel"	"Schließen"
 "[english]HeadsetView_CloseButtonLabel"	"Close"
 "HeadsetView_EyeMode_Both"	"Beide Augen"
