--- a/content/vrmonitor/translations/vrmonitor_portuguese.txt
+++ b/content/vrmonitor/translations/vrmonitor_portuguese.txt
@@ -2551,9 +2551,9 @@
 "HeadsetView_FullscreenButtonLabel"	"Ecrã completo"
 "[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
 "HeadsetView_DockButtonLabel"	"Juntar vista"
-"[english]HeadsetView_DockButtonLabel"	"Dock View"
+"[english]HeadsetView_DockButtonLabel"	"Dock VR View"
 "HeadsetView_UndockButtonLabel"	"Separar vista"
-"[english]HeadsetView_UndockButtonLabel"	"Undock View"
+"[english]HeadsetView_UndockButtonLabel"	"Undock VR View"
 "HeadsetView_CloseButtonLabel"	"Fechar"
 "[english]HeadsetView_CloseButtonLabel"	"Close"
 "HeadsetView_EyeMode_Both"	"Ambos os olhos"
