--- a/content/vrmonitor/translations/vrmonitor_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_ukrainian.txt
@@ -2541,9 +2541,9 @@
 "HeadsetView_FullscreenButtonLabel"	"Повний екран"
 "[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
 "HeadsetView_DockButtonLabel"	"Закріпити вид"
-"[english]HeadsetView_DockButtonLabel"	"Dock View"
+"[english]HeadsetView_DockButtonLabel"	"Dock VR View"
 "HeadsetView_UndockButtonLabel"	"Відкріпити вид"
-"[english]HeadsetView_UndockButtonLabel"	"Undock View"
+"[english]HeadsetView_UndockButtonLabel"	"Undock VR View"
 "HeadsetView_CloseButtonLabel"	"Закрити"
 "[english]HeadsetView_CloseButtonLabel"	"Close"
 "HeadsetView_EyeMode_Both"	"Обидва ока"
