1570842478 | 2 files | M bin/version.txt,  M resources/webinterface/dashboard/localization/webhelper_english.json
https://steamdb.info/patchnotes/4280900/

--- a/resources/webinterface/dashboard/localization/webhelper_english.json
+++ b/resources/webinterface/dashboard/localization/webhelper_english.json
@@ -21,6 +21,7 @@
 	"PowerMenuResetSeatedPosition": "Reset Seated Position",
 	"PowerMenuTurnOffController": "Turn Off Controller",
 	"PowerMenuQuitSceneApp": "Exit %1$s",
+	"PowerMenuQuitSceneApp_NoApp": "Exit App",
 	"PowerMenuExitVR": "Exit VR",
 	"PowerMenuCancel": "Cancel",
 	"PowerMenuHeader": "Power Menu",
